--- a/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/SignUpPage.html
+++ b/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/SignUpPage.html
@@ -36,17 +36,12 @@
          th:replace="fragments/navbar :: navbar">
     </nav>
     <div class="container-fluid h-custom">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-md-9 col-lg-6 col-xl-5">
-                <img src="https://mdbootstrap.com/img/Photos/new-templates/bootstrap-login-form/draw2.png"
-                     class="img-fluid"
-                     alt="Sample image">
-            </div>
+        <div class="row d-flex justify-content-center h-100">
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                 <form action="SignUp" method="post">
 
                     <div class="divider d-flex align-items-center my-4">
-                        <p class="text-center fw-bold mx-3 mb-0">Sign up</p>
+                        <h2>Customer SignUp</h2>
                     </div>
 
                     <!-- Username input -->
