--- a/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/PaymentPage.html
+++ b/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/PaymentPage.html
@@ -17,7 +17,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light"
      th:replace="fragments/navbar :: navbar">
 </nav>
-    <div th:text="${result}"></div>
-    <div th:text="${nFailedPayments}"></div>
+<div class="container-fluid h-custom">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-md-9 col-lg-6 col-xl-5">
+            <span th:if="${result == true}" th:inline="text"><b style="text-align: center">Payment completed</b></span>
+            <span th:if="${result == false}" th:inline="text"><b style="text-align: center">Payment failed</b></span>
+        </div>
+    </div>
+</div>
 </body>
 </html>
