--- a/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/SignInPage.html
+++ b/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/SignInPage.html
@@ -36,18 +36,14 @@
          th:replace="fragments/navbar :: navbar">
     </nav>
     <div class="container-fluid h-custom">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-md-9 col-lg-6 col-xl-5">
-                <img src="https://mdbootstrap.com/img/Photos/new-templates/bootstrap-login-form/draw2.png"
-                     class="img-fluid"
-                     alt="Sample image">
-            </div>
+        <div class="row d-flex justify-content-center h-100">
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                 <form action="SignIn" method="post">
 
                     <div class="divider d-flex align-items-center my-4">
-                        <p class="text-center fw-bold mx-3 mb-0">Sign in</p>
+                        <h2>Customer Login</h2>
                     </div>
+
 
                     <!-- Email input -->
                     <div class="form-outline mb-4">
@@ -72,6 +68,7 @@
                         <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="SignUp"
                                                                                           class="link-danger">Register</a>
                         </p>
+                        <a href="/Employee">Are you an employee?</a>
                     </div>
                 </form>
                 <p class="text-danger" th:text="${errorMsg}"></p>
