--- a/EmployeeWeb/src/it.polimi.DB2/web/WEB-INF/templates/SignInPage.html
+++ b/EmployeeWeb/src/it.polimi.DB2/web/WEB-INF/templates/SignInPage.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <div th:replace="fragments/headerImport :: header"></div>
+    <!-- Meta tag required for boostrap -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link crossorigin="anonymous"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          rel="stylesheet">
     <title>PoliComShop - SignIn</title>
     <style>
         .divider:after,
@@ -25,40 +32,38 @@
 </head>
 <body>
 <section class="vh-100">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"
+         th:replace="fragments/navbar :: navbar">
+    </nav>
     <div class="container-fluid h-custom">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-md-9 col-lg-6 col-xl-5">
-                <img alt="Sample image"
-                     class="img-fluid"
-                     src="https://mdbootstrap.com/img/Photos/new-templates/bootstrap-login-form/draw2.png">
-            </div>
+        <div class="row d-flex justify-content-center h-100">
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                 <form action="SignIn" method="post">
 
                     <div class="divider d-flex align-items-center my-4">
-                        <p class="text-center fw-bold mx-3 mb-0">Sign in</p>
+                        <h2>Employee Login</h2>
                     </div>
+
 
                     <!-- Email input -->
                     <div class="form-outline mb-4">
-                        <input class="form-control form-control-lg" id="email" name="email"
-                               placeholder="Enter a valid email address"
-                               type="email"/>
+                        <input type="email" id="email" name="email" class="form-control form-control-lg"
+                               placeholder="Enter a valid email address"/>
                         <label class="form-label" for="email">Email address</label>
                     </div>
 
                     <!-- Password input -->
                     <div class="form-outline mb-3">
-                        <input class="form-control form-control-lg" id="password" name="password"
-                               placeholder="Enter password"
-                               type="password"/>
+                        <input type="password" id="password" name="password" class="form-control form-control-lg"
+                               placeholder="Enter password"/>
                         <label class="form-label" for="password">Password</label>
                     </div>
 
                     <div class="text-center text-lg-start mt-4 pt-2">
-                        <button class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;"
-                                type="submit">Login
+                        <button type="submit" class="btn btn-primary btn-lg"
+                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login
                         </button>
+                        <a href="/Customer">Are you a customer?</a>
                     </div>
                 </form>
                 <p class="text-danger" th:text="${errorMsg}"></p>
