--- a/EmployeeWeb/src/it.polimi.DB2/web/WEB-INF/templates/fragments/navbar.html
+++ b/EmployeeWeb/src/it.polimi.DB2/web/WEB-INF/templates/fragments/navbar.html
@@ -6,21 +6,22 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="d-flex">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link"><span style="color: white" th:text="${user.getUsername()}">Pippo</span></a>
-                </li>
-                <li>
-                    <a class="nav-link" style="color: white" th:href="@{/ManagePackages}">Manage packages</a>
-                </li>
-                <li>
-                    <a class="nav-link" style="color: white" th:href="@{/Report}">Report Page</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/Logout}"><span style="color: white">Logout</span></a>
-                </li>
-            </ul>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav" th:unless="${user!=null}">
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/SignIn}"><span style="color: white">Login</span></a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav" th:if="${user!=null}">
+                    <li class="nav-item">
+                        <a class="nav-link"> <span style="color: white" th:text="${user.getUsername()}">Pippo</span></a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/Logout}"><span style="color: white">Logout</span></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
     </div>
 </nav>
