--- a/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/HomePage.html
+++ b/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/HomePage.html
@@ -9,15 +9,9 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           rel="stylesheet">
+
     <title>PoliComShop - Home</title>
     <style>
-        .divider:after,
-        .divider:before {
-            content: "";
-            flex: 1;
-            height: 1px;
-            background: #eee;
-        }
 
         .h-custom {
             height: calc(100% - 73px);
@@ -36,28 +30,35 @@
 </nav>
 <section class="vh-100">
     <div class="container-fluid h-auto w-75">
-
         <div th:if="${rejPayments != null && #lists.size(rejPayments) > 0}">
             <h1 style="margin-bottom: 20px; margin-top: 20px">Rejected payments</h1>
-            <div th:each="order: ${rejPayments}" class="list-group">
-                <div class="list-group-item list-group-item-action">
-                    <div class="d-flex w-100 justify-content-between">
-                        <h5 class="mb-1" th:text="${order.offer.servicePackage.name}">Package name</h5>
+            <p style="margin-bottom: 20px; margin-top: 20px; color: grey">List of unsuccessful payments:</p>
+            <div class="list-group">
+                <div th:each="order: ${rejPayments}" style="margin-bottom: 20px"
+                     class="list-group-item list-group-item-action">
+                    <div class="d-flex w-100 justify-content-between" style="vertical-align: center">
                         <div>
-                            <b class="text-muted" th:text="${order.totalMonthlyFee}">0€</b> <b class="text-muted">&euro;</b>
+                            <h5 class="mb-1" th:text="${order.offer.servicePackage.name}">Package name</h5>
+                            <span class="mb-1"
+                                  th:text="${#dates.format(order.creationDate, 'dd/MM/yyyy')}">12/10/2021</span>
                         </div>
-
+                        <div>
+                            <b class="text-muted" th:text="${order.totalMonthlyFee}">0€</b> <b
+                                class="text-muted">&euro;</b>
+                            <div style="width: 30px"></div>
+                            <a class="btn btn-primary float-end" th:href="@{Payment(id=${order.id})}"
+                               role="button">Repay</a>
+                        </div>
                     </div>
-                    <p class="mb-1" th:text="${#dates.format(order.creationDate, 'dd/MM/yyyy')}">12/10/2021</p>
-                    <a class="btn btn-primary float-end" th:href="@{Payment(id=${order.id})}" role="button">Repay</a>
                 </div>
             </div>
         </div>
-        <h1 style="margin-bottom: 20px; margin-top: 20px">Our Service Package</h1>
+        <h1 style="margin-bottom: 20px; margin-top: 20px">Our Service Packages</h1>
         <div class="row">
             <div th:each="sPackage: ${servicePackages}" class="card" style="width: 18rem; margin: 20px">
                 <div class="card-body">
                     <h5 class="card-title" style="font-weight: bold" th:text="${sPackage.getName()}">Package name</h5>
+                    <p style="margin-bottom: 10px; margin-top: 10px; color: grey">this package includes the following services</p>
                 </div>
                 <div class="container h-custom">
                     <ul class="list-group">
