--- a/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/PaymentPage.html
+++ b/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/PaymentPage.html
@@ -17,13 +17,15 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light"
      th:replace="fragments/navbar :: navbar">
 </nav>
-<div class="container-fluid h-custom">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-md-9 col-lg-6 col-xl-5">
-            <span th:if="${result == true}" th:inline="text"><b style="text-align: center">Payment completed</b></span>
-            <span th:if="${result == false}" th:inline="text"><b style="text-align: center">Payment failed</b></span>
-        </div>
+<main role="main" class="container" style="text-align: center">
+
+
+    <div class="starter-template" style="margin-top: 40px">
+        <h1 th:if="${result == true}" style="color: green">Payment completed</h1>
+        <h1 th:if="${result == false}" style="color: darkred">Payment failed</h1>
+        <p th:if="${result == true}" class="lead">Thanks for your purchase</p>
+        <p th:if="${result == false}" class="lead">You can retry from your <a href="/Customer">Home Page</a></p>
     </div>
-</div>
+</main>
 </body>
 </html>
