--- a/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/SignInPage.html
+++ b/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/SignInPage.html
@@ -1,81 +1,180 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    &lt;!&ndash; Meta tag required for boostrap &ndash;&gt;-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
+<!--    &lt;!&ndash; Bootstrap CSS &ndash;&gt;-->
+<!--    <link crossorigin="anonymous"-->
+<!--          href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"-->
+<!--          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"-->
+<!--          rel="stylesheet">-->
+<!--    <title>PoliComShop - SignIn</title>-->
+<!--    <style>-->
+<!--        .divider:after,-->
+<!--        .divider:before {-->
+<!--            content: "";-->
+<!--            flex: 1;-->
+<!--            height: 1px;-->
+<!--            background: #eee;-->
+<!--        }-->
+
+<!--        .h-custom {-->
+<!--            height: calc(100% - 73px);-->
+<!--        }-->
+
+<!--        @media (max-width: 450px) {-->
+<!--            .h-custom {-->
+<!--                height: 100%;-->
+<!--            }-->
+<!--        }-->
+<!--    </style>-->
+<!--</head>-->
+<!--<body>-->
+<!--<section class="vh-100">-->
+<!--    <nav class="navbar navbar-expand-lg navbar-light bg-light"-->
+<!--         th:replace="fragments/navbar :: navbar">-->
+<!--    </nav>-->
+<!--    <div class="container-fluid h-custom">-->
+<!--        <div class="row d-flex justify-content-center h-100">-->
+<!--            <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">-->
+<!--                <form action="SignIn" method="post">-->
+
+<!--                    <div class="divider d-flex align-items-center my-4">-->
+<!--                        <h2>Customer Login</h2>-->
+<!--                    </div>-->
+
+
+<!--                    &lt;!&ndash; Email input &ndash;&gt;-->
+<!--                    <div class="form-outline mb-4">-->
+<!--                        <input type="email" id="email" name="email" class="form-control form-control-lg"-->
+<!--                               placeholder="Enter a valid email address"/>-->
+<!--                        <label class="form-label" for="email">Email address</label>-->
+<!--                    </div>-->
+
+<!--                    &lt;!&ndash; Password input &ndash;&gt;-->
+<!--                    <div class="form-outline mb-3">-->
+<!--                        <input type="password" id="password" name="password" class="form-control form-control-lg"-->
+<!--                               placeholder="Enter password"/>-->
+<!--                        <label class="form-label" for="password">Password</label>-->
+<!--                    </div>-->
+
+<!--                    <input checked hidden name="paymentInProgress" th:if="${paymentInProgress}" type="checkbox">-->
+
+<!--                    <div class="text-center text-lg-start mt-4 pt-2">-->
+<!--                        <button type="submit" class="btn btn-primary btn-lg"-->
+<!--                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login-->
+<!--                        </button>-->
+<!--                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="SignUp"-->
+<!--                                                                                          class="link-danger">Register</a>-->
+<!--                        </p>-->
+<!--                        <a href="/Employee">Are you an employee?</a>-->
+<!--                    </div>-->
+<!--                </form>-->
+<!--                <p class="text-danger" th:text="${errorMsg}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
+
+<!--</body>-->
+<!--</html>-->
+
+
+<!doctype html>
+<html lang="en">
 <head>
-    <!-- Meta tag required for boostrap -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+
+    <title>PoliComShop - Customer Login</title>
+
     <link crossorigin="anonymous"
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           rel="stylesheet">
-    <title>PoliComShop - SignIn</title>
+
     <style>
-        .divider:after,
-        .divider:before {
-            content: "";
-            flex: 1;
-            height: 1px;
-            background: #eee;
+        html,
+        body {
+            height: 100%;
         }
 
-        .h-custom {
-            height: calc(100% - 73px);
+        body {
+            display: -ms-flexbox;
+            display: -webkit-box;
+            display: flex;
+            -ms-flex-align: center;
+            -ms-flex-pack: center;
+            -webkit-box-align: center;
+            align-items: center;
+            -webkit-box-pack: center;
+            justify-content: center;
+            padding-top: 40px;
+            padding-bottom: 40px;
+            background-color: #f5f5f5;
         }
 
-        @media (max-width: 450px) {
-            .h-custom {
-                height: 100%;
-            }
+        .form-signin {
+            width: 100%;
+            max-width: 330px;
+            padding: 15px;
+            margin: 0 auto;
         }
+
+        .form-signin .checkbox {
+            font-weight: 400;
+        }
+
+        .form-signin .form-control {
+            position: relative;
+            box-sizing: border-box;
+            height: auto;
+            padding: 10px;
+            font-size: 16px;
+        }
+
+        .form-signin .form-control:focus {
+            z-index: 2;
+        }
+
+        .form-signin input[type="email"] {
+            margin-bottom: -1px;
+            border-bottom-right-radius: 0;
+            border-bottom-left-radius: 0;
+        }
+
+        .form-signin input[type="password"] {
+            margin-bottom: 10px;
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+        }
+
     </style>
+
+
 </head>
-<body>
-<section class="vh-100">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light"
-         th:replace="fragments/navbar :: navbar">
-    </nav>
-    <div class="container-fluid h-custom">
-        <div class="row d-flex justify-content-center h-100">
-            <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                <form action="SignIn" method="post">
 
-                    <div class="divider d-flex align-items-center my-4">
-                        <h2>Customer Login</h2>
-                    </div>
+<body class="text-center">
+<form class="form-signin" action="SignIn" method="post">
 
-
-                    <!-- Email input -->
-                    <div class="form-outline mb-4">
-                        <input type="email" id="email" name="email" class="form-control form-control-lg"
-                               placeholder="Enter a valid email address"/>
-                        <label class="form-label" for="email">Email address</label>
-                    </div>
-
-                    <!-- Password input -->
-                    <div class="form-outline mb-3">
-                        <input type="password" id="password" name="password" class="form-control form-control-lg"
-                               placeholder="Enter password"/>
-                        <label class="form-label" for="password">Password</label>
-                    </div>
-
-                    <input checked hidden name="paymentInProgress" th:if="${paymentInProgress}" type="checkbox">
-
-                    <div class="text-center text-lg-start mt-4 pt-2">
-                        <button type="submit" class="btn btn-primary btn-lg"
-                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login
-                        </button>
-                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="SignUp"
-                                                                                          class="link-danger">Register</a>
-                        </p>
-                        <a href="/Employee">Are you an employee?</a>
-                    </div>
-                </form>
-                <p class="text-danger" th:text="${errorMsg}"></p>
-            </div>
-        </div>
-    </div>
-</section>
-
+    <a href="/Customer"><img class="mb-4" src="images/logo.png" alt=""  width="250"></a>
+    <h1 class="h3 mb-3 font-weight-normal">Customer login</h1>
+    <label for="inputEmail" class="sr-only">Email address</label>
+    <input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email address" required
+           autofocus>
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
+    <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="SignUp">Register</a>
+    </p>
+    <a class="small" style="color: grey" href="/Employee">If you are an Employee click here</a>
+    <button class="btn btn-lg btn-primary btn-block" style="margin-top: 20px" type="submit">Sign in</button>
+    <p class="text-danger" th:if="${errorMes != ''}" th:text="${errorMsg}">
+    <p class="mt-5 mb-3 text-muted">&copy; 2021-2022</p>
+    <input checked hidden name="paymentInProgress" th:if="${paymentInProgress}" type="checkbox">
+</form>
 </body>
 </html>
