--- a/EmployeeWeb/src/it.polimi.DB2/web/WEB-INF/templates/fragments/navbar.html
+++ b/EmployeeWeb/src/it.polimi.DB2/web/WEB-INF/templates/fragments/navbar.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-primary" th:fragment="navbar">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(51, 102, 255, 0.6)" th:fragment="navbar">
     <div class="container-fluid">
-        <a class="navbar-brand bg-white" href="/" th:href="@{/}"><b>PoliComShop</b></a>
+        <a class="navbar-brand" href="/" th:href="@{/}"><img src="images/logo.png" alt="" width="200"></a>
         <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
                 data-bs-target="#navbarNav" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
@@ -9,19 +9,20 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav" th:unless="${user!=null}">
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/SignIn}"><span style="color: white">Login</span></a>
+                        <a class="nav-link" th:href="@{/SignIn}"><span style="color: white"><b>Login</b></span></a>
                     </li>
                 </ul>
                 <ul class="navbar-nav" th:if="${user!=null}">
                     <li class="nav-item">
-                        <a class="nav-link"> <span style="color: white" th:text="${user.getUsername()}">Pippo</span></a>
-                    </li>
-
-                    <li class="nav-item">
                         <a class="nav-link" th:href="@{/Logout}"><span style="color: white">Logout</span></a>
                     </li>
+                    <button class="btn btn-secondary" type="button"
+                            th:text="${user.getUsername()}">
+                        Username
+                    </button>
                 </ul>
             </div>
         </div>
     </div>
 </nav>
+
