--- a/EmployeeWeb/src/it.polimi.DB2/web/WEB-INF/templates/SignInPage.html
+++ b/EmployeeWeb/src/it.polimi.DB2/web/WEB-INF/templates/SignInPage.html
@@ -162,7 +162,7 @@
            autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
-    <a class="small" style="color: grey" href="/Employee">If you are a Customer click here</a>
+    <a class="small" style="color: grey" href="/Customer">If you are a Customer click here</a>
     <button class="btn btn-lg btn-primary btn-block" style="margin-top: 20px" type="submit">Sign in</button>
     <p class="text-danger" th:text="${errorMsg}">
     <p class="mt-5 mb-3 text-muted">&copy; 2021-2022</p>
